--- a/data_utils.ipynb
+++ b/data_utils.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tnguyen/anaconda3/envs/lolify/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import glob\n",
@@ -35,17 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Directories\n",
-    "outer_directory = '/Users/tnguyen/Documents/DiffusionExp/OnePieceKaggle/data'\n",
-    "output_directory = '/Users/tnguyen/Documents/DiffusionExp/onepiece_kaggle_hf'\n",
+    "outer_directory = '/Users/tnguyen/Documents/DiffusionExp/data/OnePieceKaggle_Small'\n",
+    "output_directory = '/Users/tnguyen/Documents/DiffusionExp/data/OnePieceKaggle_Small_hf'\n",
     "os.makedirs(output_directory, exist_ok=True)\n",
     "\n",
     "\n",
-    "csv_file = '/Users/tnguyen/Documents/DiffusionExp/onepiece_kaggle_hf/metadata.csv'\n",
+    "csv_file = '/Users/tnguyen/Documents/DiffusionExp/data/OnePieceKaggle_Small_hf/metadata.csv'\n",
     "\n",
     "with open(csv_file, mode='w', newline='', encoding='utf-8') as file:\n",
     "    writer = csv.writer(file)\n",
@@ -55,20 +64,21 @@
     "    for class_name in os.listdir(outer_directory):\n",
     "        class_path = os.path.join(outer_directory, class_name)\n",
     "        if os.path.isdir(class_path):\n",
-    "            for image_file in os.listdir(class_path):\n",
-    "                image_path = os.path.join(class_path, image_file)\n",
-    "                if os.path.isfile(image_path):\n",
-    "                    # Process the image\n",
-    "                    try:\n",
-    "                        image = Image.open(image_path)\n",
-    "                        image_name = f'image_{image_counter}.png'\n",
-    "                        output_image_path = os.path.join(output_directory, image_name)\n",
-    "                        image.save(output_image_path)\n",
-    "                        writer.writerow([image_name,class_name])\n",
-    "                        # Increment image counter\n",
-    "                        image_counter += 1\n",
-    "                    except:\n",
-    "                        continue\n"
+    "            for i, image_file in enumerate(os.listdir(class_path)):\n",
+    "                if(i < 5):\n",
+    "                    image_path = os.path.join(class_path, image_file)\n",
+    "                    if os.path.isfile(image_path):\n",
+    "                        # Process the image\n",
+    "                        try:\n",
+    "                            image = Image.open(image_path)\n",
+    "                            image_name = f'image_{image_counter}.png'\n",
+    "                            output_image_path = os.path.join(output_directory, image_name)\n",
+    "                            image.save(output_image_path)\n",
+    "                            writer.writerow([image_name,class_name])\n",
+    "                            # Increment image counter\n",
+    "                            image_counter += 1\n",
+    "                        except:\n",
+    "                            continue\n"
    ]
   },
   {
@@ -98,6 +108,47 @@
     "        image.save(image_path)\n",
     "        writer.writerow([image_name, item['text']])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Resolving data files: 100%|██████████| 31/31 [00:00<00:00, 78092.15it/s]\n",
+      "Generating train split: 30 examples [00:00, 1017.94 examples/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['image', 'text'],\n",
+       "        num_rows: 30\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = load_dataset(\"/Users/tnguyen/Documents/DiffusionExp/data/OnePieceKaggle_Small_hf\")\n",
+    "d['train'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
