changing finetune command

--- a/finetune.ipynb
+++ b/finetune.ipynb
@@ -18,20 +18,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "!python3 /content/diffusers/examples/text_to_image/train_text_to_image_lora.py \\\n",
-    "  --pretrained_model_name_or_path=$MODEL_NAME \\\n",
-    "  --train_data_dir=$DATASET_NAME \\\n",
-    "  --enable_xformers_memory_efficient_attention \\\n",
-    "  --caption_column=\"text\" \\\n",
-    "  --image_column=\"image\" \\\n",
+    "!python /home/anhn/DiffusionExp/diffusers/examples/text_to_image/train_text_to_image_lora.py \\\n",
+    "  --pretrained_model_name_or_path=\"runwayml/stable-diffusion-v1-5\" \\\n",
+    "  --dataset_name=\"lambdalabs/pokemon-blip-captions\" \\\n",
     "  --resolution=512 \\\n",
     "  --center_crop \\\n",
     "  --random_flip \\\n",
@@ -44,7 +34,8 @@
     "  --lr_warmup_steps=0 \\\n",
     "  --mixed_precision=\"fp16\" \\\n",
     "  --checkpointing_steps=5000 \\\n",
-    "  --output_dir=\"/content/drive/MyDrive/output\" \\"
+    "  --train_batch_size=1 \\\n",
+    "  --output_dir=\"/home/anhn/DiffusionExp/output\" "
    ]
   }
  ],
